--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
