--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "firebase": "^10.6.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
